[package]
name = "quell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
# bevy_fly_camera = "0.8.0"
# smooth-bevy-cameras = "0.7.0"
smooth-bevy-cameras = "0.10.0"

# Loading BSP map files
vbsp = { git = "https://github.com/icewind1991/vbsp" }
# Loading VPK files (for textures/models)
vpk = { git = "https://github.com/roman901/vpk-rs" }
