[package]
name = "quell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12" }
eyre = "0.6.8"
image = "0.24.7"
# bevy_fly_camera = "0.8.0"
# smooth-bevy-cameras = "0.7.0"
smooth-bevy-cameras = "0.10.0"

# Loading BSP map files
# vbsp = { git = "https://github.com/MinusGix/vbsp" }
vbsp = { path = "../../vbsp" }
# Loading VPK files (for textures/models)
# vpk = { git = "https://github.com/MinusGix/vpk-rs" }
vpk = { path = "../../vpk-rs" }
# For parsing VTF (for textures)
# vtf = { git = "https://github.com/MinusGix/vtf-rs" }
vtf = { path = "../../vtf-rs/" }
vmt = { path = "../vmt/" }
# vtf = { git = "https://github.com/MinusGix/vmdl" }
vmdl = { path = "../../vmdl/" }
rayon = "1.8.0"
dashmap = "5.5.3"
indexmap = "2.1.0"
memmap2 = "0.9.0"
bv = "0.11.1"
rand = "0.8.5"
derivative = "2.2.0"

bevy_mod_outline = "0.6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "material"
harness = false
